[package]
name = "amm"
version = "0.1.0"
description = "Enhanced CLMM-based AMM program with multi-sig security and concentrated liquidity"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
spl-token = { version = "6.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "5.0", features = ["no-entrypoint"] }
mpl-token-metadata = "5.0"

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
tokio = "1.0"