[package]
name = "bonding-curve"
version = "0.1.0"
description = "Enhanced bonding curve program based on CP-Swap with multi-sig security"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"

[dev-dependencies]
solana-program-test = "1.8"
solana-sdk = "1.8"
tokio = "1.0"